fix: update viewport meta tag for remove zoom and increase padding bottom on mobile view

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,7 +102,7 @@ html {
   .simple-page {
     width: 100vw !important;
     padding: 0rem !important;
-    padding-bottom: 1rem !important;
+    padding-bottom: 2rem !important;
 
     .content {
       .card {
@@ -122,11 +122,6 @@ html {
   body {
     font-size: 12px !important;
   }
-}
-
-.mat-mdc-list-item-unscoped-content {
-  display: flex !important;
-  align-items: center !important;
 }
 
 * {
@@ -256,6 +251,11 @@ mat-card-title {
 
 .mat-button-toggle-button {
   display: flex !important;
+}
+
+.mat-mdc-list-item-unscoped-content {
+  display: flex !important;
+  align-items: center !important;
 }
 
 // END ANGULAR FIX ***********
